<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="place_api_key">AIzaSyB_1jcVRcsziBZ5nB796flr3GUGOeUiNUw</string>
    <string name="receipt_app_id">EINV6201608099805</string>
    <string name="receipt_api_key">U3R4b1U3YjQ0Z3hSeFBEaw==</string>
    <string name="title_notice_dialog">!!! Notice !!!</string>
    <string name="title_positive_btn_label">Ok</string>
    <string name="title_positive_go_setting_btn_label">Setting</string>
    <string name="title_negative_btn_label">Cancel</string>
    <string name="title_neutral_btn_import_in_expired">Import in expired</string>
    <string name="title_loading">Loading...</string>
    <string name="title_photo_write_progress">Photo writing...</string>
    <string name="on_loading">Data Loading...</string>
    <string name="no_network_view_message1">This function has to connect to internet</string>
    <string name="no_network_view_message2">• Please confirm your wifi/mobile network is connected and not under airplane mode</string>
    <string name="no_network_view_message3">• If you connect to Wi-Fi, please confirm the connection service is available</string>
    <string name="no_network_view_message4">• If you connect to mobile network, please consider to move to some location that has better signal</string>
    <string name="no_gps_view_message1">This function has to connect to GPS</string>
    <string name="no_gps_view_message2">• Please comfirm your positioning function is open and available</string>
    <string name="data_progressing">Data handling...</string>
    <string name="data_progressing_fail">Data processing failed, please try it again</string>
    <string name="data_save_success">Data saved successfully</string>
    <string name="data_save_fail">Data saved fail</string>
    <string name="ga_app_view_login_material_fragment">過期物品輸入頁面 - LoginMaterialFragment</string>
    <string name="ga_app_view_material_manager_fragment">過期物品管理頁面 - MaterialManagerFragment</string>
    <string name="ga_app_view_settings_fragment">設定頁面 - SettingsFragment</string>
    <string name="ga_app_view_grocery_list_login_fragment">登入購物清單 - LoginGroceryListFragment</string>
    <string name="ga_app_view_grocery_list_fragment">檢視購物清單列表 - GroceryListFragment</string>
    <string name="ga_app_view_grocery_history_fragment">購物歷史 - GroceryHistoryFragment</string>
    <string name="ga_app_view_reward_cards_fragment">購物優惠卡 - RewardCardsFragment</string>
    <string name="perm_rationale_write_ext_storage">The functionality need a permission for writing data to external storage to permanently keep it. Please give the permission and retry again</string>
    <string name="perm_rationale_read_ext_storage">The functionality need a permission for reading and applying the related data from external storage. Please give the permission and retry again</string>
    <string name="perm_rationale_camera">The functionality need a permission for using the camera to scan the input data. Please give the permission and retry again</string>
    <string name="perm_rationale_location">The functionality need a permission for accessing the location information so that it can find out the stores that close to you and related distance. Please give the permission and retry again</string>
    <string name="perm_rationale_read_phone_state">The functionality need to encrypt the query by phone information</string>
    <string name="privacy_policy_domain">https://commonstatichost.firebaseapp.com/mobile-privacy-policy-grocery-amp-expired.html</string>
    <string name="app_name">Expired Monitor</string>
    <string name="title_login_material">Login</string>
    <string name="title_view_material">View</string>
    <string name="menu_sort_by_date">Sort(by date)</string>
    <string name="menu_sort_by_name">Sort(by name)</string>
    <string name="menu_sort_by_place">Sort(by place)</string>
    <string name="menu_grid_1x1">1 x 1 grid </string>
    <string name="menu_grid_2x1">1 x 2 grid</string>
    <string name="menu_clear_expired_items">Clear exp. item(s)</string>
    <string name="menu_receipt_grocery_login">Login the grocery list by receipt</string>
    <string name="menu_share">Share</string>
    <string name="menu_contact_us">Contact us</string>
    <string name="menu_about">About</string>
    <string name="slidemenu_msg_second_back_key_quit">Leave the app when press back key for one time more</string>
    <string name="slidemenu_material_management_title">Expired Monitor</string>
    <string name="slidemenu_material_login_title">Login Material Info.</string>
    <string name="slidemenu_material_view_title">View Material Info.</string>
    <string name="slidemenu_grocery_title">Grocery Monitor</string>
    <string name="slidemenu_gcrocery_login_list_title">Login Grocery List</string>
    <string name="slidemenu_gcrocery_list_view_title">View Grocery List</string>
    <string name="slidemenu_gcrocery_reward_cards">Cards</string>
    <string name="slidemenu_grocery_history">Grocery History</string>
    <string name="slidemenu_material_other">Others</string>
    <string name="slidemenu_material_global_search">Global Search</string>
    <string name="slidemenu_material_settings">Settings</string>
    <string name="slidemenu_material_about">About</string>
    <string name="slidemenu_material_feedback">Feedback</string>
    <string name="slidemenu_material_privacy_policy">Privacy Policy</string>
    <string name="feedback_mail">yianday0330@gmail.com</string>
    <string name="feedback_subject">【Expired Monitor】Feedback and suggestion</string>
    <string name="feedback_content">感謝您對過期物品管家的支持，若有任何建議，請在此填寫您的意見以及聯繫資料。\n\n系統平台版本: %1$s \n應用程式版本: %2$s\n設備種類: %3$s</string>
    <string name="title_current_location">!!!I am here!!!</string>
    <string name="title_nearby_search">NEARBY PLACES</string>
    <string name="title_nearby_dist">NEARBY DISTANCES</string>
    <string name="title_search_store_hint">Enter store name to search</string>
    <string name="title_nearby_dist_info">km (MAX: 7 km)</string>
    <string name="title_marker_dist_info_kilo_meter">Distance: %1$s km</string>
    <string name="title_marker_dist_info_meter">Distance: %1$s m</string>
    <string name="store_map_msg_err_location_disabled">Location provider is not enabled, please turn on your GPS/mobile network provider and retry again</string>
    <string name="store_map_msg_err_location_useless">Location information can not be retrieved, please retry by manually pressing the locating button in the top right corner and waiting a moment</string>
    <string name="store_map_msg_err_retry">Can not retrieve data，please re-try it later...</string>
    <string name="store_map_msg_location_updating">Location updating，please wait a moment...</string>
    <string name="camera_activity_actionbar_title">Camera Preview</string>
    <string name="title_camera_reconfiguring">Camera reconfiguring...</string>
    <string name="global_search">Global Search</string>
    <string name="global_search_material_group">Material Items</string>
    <string name="global_search_grocery_group">Grocery Items</string>
    <string name="global_search_rest_days_exp">%1$s days exp.</string>
    <string name="global_search_material_qty">Qty:</string>
    <string name="global_search_material_price">Price:</string>
    <string name="global_search_shop_place">Shopping plan \u0022%1$s\u0022</string>
    <string name="global_search_checkout_date">Purchasing date \u0022%1$s\u0022</string>
    <string name="global_search_not_checkout">尚未結算</string>
    <string name="global_search_qty">Quantity \u0022%1$s\u0022</string>
    <string name="global_search_price">Unit-price \u0022%1$s %2$s\u0022</string>
    <string name="image">Image</string>
    <string name="userInfoChat">Chat</string>
    <string name="userInfoFreecall">Free call</string>
    <string name="mplusCall">Call</string>
    <string name="userInfoGift">Send Gift</string>
    <string name="addressbookEmail">E-mail</string>
    <string name="mplusPaySMS">SMS</string>
    <string name="chatWithCelebrity">Chat</string>
    <string name="userInfoAddressBook">Contacts</string>
    <string name="group_bulletin">Bulletin</string>
    <string name="group_member">Members</string>
    <string name="group_dialog_edit_item">Edit</string>
    <string name="unblock">Unblock</string>
    <string name="userInfoaddFriend">Add Friend</string>
    <string name="material_modify_actionbar_title">Other - Material Modification</string>
    <string name="setting_activity_label">Settings</string>
    <string name="title_tv_notification_types">Notification type</string>
    <string name="title_tv_notification_vibrate">Vibrate</string>
    <string name="title_tv_notification_sound">Sound</string>
    <string name="title_tv_notification_frequnecy_label">Notification frequency</string>
    <string name="title_tv_font_size_label">Font size adjustment</string>
    <string name="title_tv_currency_label">Currency</string>
    <string name="title_tv_date_format_label">Date format</string>
    <string name="title_change_currency_dialog_title">Change the currency symbol</string>
    <string name="title_change_currency_dialog_body">Enter the new currency symbol</string>
    <string name="title_tv_current_currency_title_label">Currency symbol</string>
    <string name="title_tv_current_date_format_title_label">Date format</string>
    <string name="title_tv_font_size_scale_first_label">Adjust the font size as</string>
    <string name="title_tv_font_size_scale_sec_label">font size</string>
    <string name="title_tv_database_manage">Database operations</string>
    <string name="title_tv_backup_database">Backup database</string>
    <string name="title_tv_restore_database">Restore database</string>
    <string name="title_spin_notification_frequnecy_first_label">per</string>
    <string name="title_spin_notification_frequnecy_sec_label">hour(s) to ring a notification</string>
    <string name="title_cloud_backup_restore">Cloud backup/resoruce source</string>
    <string name="title_dropbox_backup_successfully">    -Backup successfully in DropBox\n</string>
    <string name="title_dropbox_backup_fail">    -Backup fail in DropBox\n</string>
    <string name="title_dropbox_restore_successfully">    -Restore successfully in DropBox\n</string>
    <string name="title_dropbox_restore_fail">    -Restore fail in DropBox\n</string>
    <string name="title_googledrive_backup_successfully">    -Backup successfully in GoogleDrive\n</string>
    <string name="title_googledrive_backup_fail">    -Backup fail in GoogleDrive\n\n</string>
    <string name="title_googledrive_restore_successfully">    -Restore successfully in GoogleDrive\n</string>
    <string name="title_googledrive_restore_fail">    -Restore fail in GoogleDrive\n</string>
    <string name="title_local_backup_successfully">    -Backup successfully in local.\n</string>
    <string name="title_local_backup_fail"> -Backup fail in local.\n</string>
    <string name="title_local_restore_successfully">    -Restore successfully in local.\n</string>
    <string name="title_local_restore_fail">    -Restore fail in local.\n</string>
    <string name="title_progress_startup">Start to [Backup/Restore] operations...</string>
    <string name="title_progress_local_backup_successfully">DB backup successfully in Local...\n(1/1)</string>
    <string name="title_material_search">Input a string</string>
    <string name="title_menu_item_add">New</string>
    <string name="title_menu_item_del">Delete</string>
    <string name="title_grocery_detail_list_item_name">Name</string>
    <string name="title_grocery_detail_list_item_price">Price</string>
    <string name="title_grocery_detail_list_item_qty">Qty</string>
    <string name="title_grocery_detail_list_item_total_coast">Total</string>
    <string name="crop">Crop</string>
    <string name="rotate_right">Right</string>
    <string name="rotate_Left">Left</string>
</resources>