<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <!-- android:icon="@android:drawable/ic_menu_search" -->
    <item
        android:id="@+id/action_search"
        android:actionViewClass="android.widget.SearchView"
        android:icon="@drawable/search_view"
        android:showAsAction="always"
        android:title="@string/title_material_search"/>

    <!-- for material add or cancel -->
    <item
        android:id="@+id/menu_action_add"
        android:icon="@drawable/ic_action_tick_green"
        android:showAsAction="always"
        android:title="@string/title_menu_item_add"/>

    <item
        android:id="@+id/menu_action_cancel"
        android:icon="@drawable/ic_action_cancel_green"
        android:showAsAction="always"
        android:title="@string/title_menu_item_del"/>

    <item
        android:id="@+id/menu_sort_by_date"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/menu_sort_by_date"/>
    <item
        android:id="@+id/menu_sort_by_name"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/menu_sort_by_name"/>
    <item
        android:id="@+id/menu_sort_by_place"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/menu_sort_by_place"/>
    <item
        android:id="@+id/menu_grid_1x1"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/menu_grid_1x1"/>
    <item
        android:id="@+id/menu_grid_2x1"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/menu_grid_2x1"/>
    <item
        android:id="@+id/menu_clear_expired_items"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/menu_clear_expired_items"/>
    <!--<item-->
        <!--android:id="@+id/menu_settings"-->
        <!--android:orderInCategory="100"-->
        <!--android:showAsAction="never"-->
        <!--android:title="@string/menu_settings"/>-->
    <!--
    <item
        android:id="@+id/menu_share"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/menu_share" />
    <item
        android:id="@+id/menu_contact_us"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/menu_contact_us" />
    -->
    <!--<item-->
        <!--android:id="@+id/menu_about"-->
        <!--android:orderInCategory="100"-->
        <!--android:showAsAction="never"-->
        <!--android:title="@string/menu_about"/>-->
</menu>