<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">
    <TextView
        android:id="@+id/tv_item_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="0.25"
        android:gravity="center"
        android:text="@string/title_grocery_detail_list_item_name"
        android:textColor="@color/border_gray"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_item_price"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="0.25"
        android:gravity="center"
        android:text="@string/title_grocery_detail_list_item_price"
        android:textColor="@color/border_gray"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_item_qty"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="0.25"
        android:gravity="center"
        android:text="@string/title_grocery_detail_list_item_qty"
        android:textColor="@color/border_gray"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_item_total"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="0.25"
        android:gravity="center"
        android:text="@string/title_grocery_detail_list_item_total_coast"
        android:textColor="@color/border_gray"
        android:textStyle="bold" />
</LinearLayout>