<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fillViewport="false">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            style="@style/profile_about_section_title"
            android:text="@string/title_tv_notification_types" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/ll_setting_common_item_layout_margin_left"
            android:layout_marginRight="@dimen/ll_setting_common_item_layout_margin_right"
            android:background="@drawable/card_bg"
            android:orientation="vertical">

            <RadioGroup
                android:id="@+id/rg_notif_types"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/rb_notif_type_vibrate"
                    style="@style/section_item_radiobutton"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/title_tv_notification_vibrate" />

                <RadioButton
                    android:id="@+id/rb_notif_type_sound"
                    style="@style/section_item_radiobutton"
                    android:layout_height="wrap_content"
                    android:text="@string/title_tv_notification_sound" />
            </RadioGroup>
        </LinearLayout>

        <TextView
            style="@style/profile_about_section_title"
            android:text="@string/title_tv_notification_frequnecy_label" />

        <LinearLayout
            style="@style/common_setting_layout_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/ll_setting_common_item_layout_margin_left"
            android:layout_marginRight="@dimen/ll_setting_common_item_layout_margin_right"
            android:background="@drawable/card_bg"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_notification_frequency_first_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_spin_notification_frequnecy_first_label"
                android:textColor="@color/settings_title_black"
                android:textSize="@dimen/font_size_medium"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/spin_notification_frequency"
                android:layout_width="@dimen/spin_setting_notif_frequency_w"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/spin_setting_notif_frequency_margin_left"
                android:layout_marginRight="@dimen/spin_setting_notif_frequency_margin_right"
                android:gravity="center"
                android:popupBackground="@color/spinner_background" />

            <TextView
                android:id="@+id/tv_notification_frequency_sec_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_spin_notification_frequnecy_sec_label"
                android:textColor="@color/settings_title_black"
                android:textSize="@dimen/font_size_medium"
                android:textStyle="bold" />
        </LinearLayout>

        <TextView
            style="@style/profile_about_section_title"
            android:text="@string/title_tv_font_size_label" />

        <LinearLayout
            style="@style/common_setting_layout_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/ll_setting_common_item_layout_margin_left"
            android:layout_marginRight="@dimen/ll_setting_common_item_layout_margin_right"
            android:background="@drawable/card_bg"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_font_size_first_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_tv_font_size_scale_first_label"
                android:textColor="@color/settings_title_black"
                android:textSize="@dimen/font_size_medium"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/spin_font_size_scale_factor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/spin_setting_font_size_scale_factor_margin_left"
                android:layout_marginRight="@dimen/spin_setting_font_size_scale_factor_margin_right"
                android:gravity="center"
                android:popupBackground="@color/spinner_background" />

            <TextView
                android:id="@+id/tv_font_size_sec_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_tv_font_size_scale_sec_label"
                android:textColor="@color/settings_title_black"
                android:textSize="@dimen/font_size_medium"
                android:textStyle="bold" />
        </LinearLayout>

        <TextView
            style="@style/profile_about_section_title"
            android:text="@string/title_tv_currency_label" />

        <LinearLayout
            style="@style/common_setting_layout_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/ll_setting_common_item_layout_margin_left"
            android:layout_marginRight="@dimen/ll_setting_common_item_layout_margin_right"
            android:background="@drawable/card_bg"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_currency_symbol_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/title_tv_current_currency_title_label"
                android:textColor="@color/settings_title_black"
                android:textSize="@dimen/font_size_medium"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_enter_currency_symbol"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="@dimen/tv_enter_currency_symbol_min_w"
                android:minHeight="@dimen/tv_enter_currency_symbol_min_h"
                android:layout_marginLeft="@dimen/tv_enter_currency_symbol_margin_left"
                android:clickable="true"
                android:gravity="center"
                android:textColor="@color/settings_title_black"
                android:textSize="@dimen/font_size_medium"
                android:text="$"/>
        </LinearLayout>

        <TextView
            style="@style/profile_about_section_title"
            android:text="@string/title_cloud_backup_restore" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/ll_setting_common_item_layout_margin_left"
            android:layout_marginRight="@dimen/ll_setting_common_item_layout_margin_right"
            android:background="@drawable/card_bg">

            <RelativeLayout
                android:id="@+id/rl_dropbox_service_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/rl_setting_dropbox_service_layout_margin_bottom"
                android:layout_marginLeft="@dimen/rl_setting_dropbox_service_layout_margin_left"
                android:layout_marginRight="@dimen/rl_setting_dropbox_service_layout_margin_right"
                android:layout_marginTop="@dimen/rl_setting_dropbox_service_layout_margin_top">

                <ImageView
                    android:id="@+id/iv_dropbox_enable"
                    android:layout_width="@dimen/iv_setting_common_cloud_service_btn_w"
                    android:layout_height="@dimen/iv_setting_common_cloud_service_btn_h"
                    android:background="@drawable/ic_dropbox_login" />

                <ImageView
                    android:id="@+id/iv_dropbox_enable_status"
                    android:layout_width="@dimen/iv_setting_common_cloud_select_status_w"
                    android:layout_height="@dimen/iv_setting_common_cloud_select_status_h"
                    android:layout_alignParentRight="true"
                    android:src="@drawable/ic_cloud_service_unselected" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rl_googledrive_service_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/rl_dropbox_service_layout"
                android:layout_marginBottom="@dimen/rl_setting_drive_service_layout_margin_bottom"
                android:layout_marginLeft="@dimen/rl_setting_drive_service_layout_margin_left"
                android:layout_marginRight="@dimen/rl_setting_drive_service_layout_margin_right"
                android:layout_marginTop="@dimen/rl_setting_drive_service_layout_margin_top">

                <ImageView
                    android:id="@+id/iv_googledriver_enable"
                    android:layout_width="@dimen/iv_setting_common_cloud_service_btn_w"
                    android:layout_height="@dimen/iv_setting_common_cloud_service_btn_h"
                    android:background="@drawable/ic_googledriver_login" />

                <ImageView
                    android:id="@+id/iv_googledriver_enable_status"
                    android:layout_width="@dimen/iv_setting_common_cloud_select_status_w"
                    android:layout_height="@dimen/iv_setting_common_cloud_select_status_h"
                    android:layout_alignParentRight="true"
                    android:src="@drawable/ic_cloud_service_unselected" />
            </RelativeLayout>
        </RelativeLayout>

        <TextView
            style="@style/profile_about_section_title"
            android:text="@string/title_tv_database_manage" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/ll_setting_common_item_layout_margin_bottom"
            android:layout_marginLeft="@dimen/ll_setting_common_item_layout_margin_left"
            android:layout_marginRight="@dimen/ll_setting_common_item_layout_margin_right"
            android:background="@drawable/card_bg"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_database_backup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/tv_setting_database_backup_margin_left"
                android:layout_marginRight="@dimen/tv_setting_database_backup_margin_right"
                android:clickable="true"
                android:gravity="center"
                android:minHeight="@dimen/tv_setting_common_bak_restore_btn_min_h"
                android:text="@string/title_tv_backup_database"
                android:textColor="@color/settings_title_black"
                android:textSize="@dimen/font_size_medium"
                android:textStyle="bold" />

            <View
                android:layout_width="@dimen/tv_setting_common_vertical_gap_w"
                android:layout_height="@dimen/tv_setting_common_vertical_gap_h"
                android:background="@color/dark_gray" />

            <TextView
                android:id="@+id/tv_database_restore"
                style="@style/common_setting_layout_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/tv_setting_database_restore_margin_left"
                android:layout_marginRight="@dimen/tv_setting_database_restore_margin_right"
                android:clickable="true"
                android:gravity="center"
                android:minHeight="@dimen/tv_setting_common_bak_restore_btn_min_h"
                android:text="@string/title_tv_restore_database"
                android:textColor="@color/settings_title_black"
                android:textSize="@dimen/font_size_medium"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>