<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mylayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusableInTouchMode="true"
    android:orientation="vertical">

    <com.material.management.component.cropper.CropImageView
        android:id="@+id/civ_source_image"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <!-- custom:imageResource="@drawable/butterfly" -->

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:focusableInTouchMode="true"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_rotate_right"
            style="@style/RoboTheme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rotate_right"
            android:textColor="#33B5E5" />

        <Button
            android:id="@+id/btn_rotate_left"
            style="@style/RoboTheme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/btn_rotate_right"
            android:text="@string/rotate_Left"
            android:textColor="#33B5E5" />

        <Button
            android:id="@+id/btn_crop"
            style="@style/RoboTheme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/btn_rotate_left"
            android:text="@string/crop"
            android:textColor="#33B5E5" />
    </RelativeLayout>

    <!--
                 <ImageView
                android:id="@+id/iv_target_image"
                style="@style/RoboTheme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center|top" />
    -->

</LinearLayout>